# aoc

./: .gitignore  Cargo.toml  README.md  calc.sh
src/: euclidic.rs  graph.rs  main.rs  parser.rs  solutions.rs  util.rs  year_2018.rs
src/euclidic/: coord.rs  direction.rs
src/graph/: mod.rs  simple_graph.rs  weighted_graph.rs
src/solutions/: year_2015.rs  year_2016.rs  year_2017.rs  year_2018.rs  year_2019.rs  year_2020.rs  year_2021.rs  year_2022.rs  year_2023.rs  year_2024.rs  year_2025.rs
src/solutions/year_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs
src/solutions/year_2016/: day_02.rs  day_04.rs  day_05.rs  (+4 more)
src/year_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  mod.rs
src/year_2016/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_06.rs  day_07.rs  mod.rs
src/year_2017/: day_01.rs
src/year_2018/: day_01.rs  day_02.rs  day_03.rs  mod.rs
src/year_2020/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_15.rs  day_16.rs  day_17.rs  mod.rs
src/year_2021/: day_01.rs  day_02.rs  day_03.rs  day_05.rs  day_06.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  mod.rs
(+65 files in other folders)
