[package]
name = "aoc"
version = "0.1.0"
authors = ["Manuel Krebs <me@leun4m.de>"]
description = "A solver for the Advent of Code riddles."
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
regex = "1.10"
